[project]
name = "Cryptea"
version = "0.1.0"
description = "Offline CTF helper for Capture the Flag study"
requires-python = ">=3.11"
authors = [{ name = "avnixm" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
dependencies = [
  "markdown2",
  "PyNaCl",
  "cryptography",
  "psutil"
]

[tool.meson-python.metadata]
requires = ["meson>=1.1.0"]
