install_data('style.css', install_dir: join_paths(get_option('datadir'), 'ctf-helper'))
install_data('org.example.CTFHelper.desktop', install_dir: join_paths(get_option('datadir'), 'applications'))
install_data('icons/org.example.CTFHelper.svg', install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
install_subdir('help', install_dir: join_paths(get_option('datadir'), 'ctf-helper', 'help'))
install_subdir('templates', install_dir: join_paths(get_option('datadir'), 'ctf-helper', 'templates'))
